fix alignment

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -40,7 +40,7 @@
 
 .user-description {
   text-align: justify;
-  margin: 5px auto	
+  margin: 0 auto;	
 }
 
 .user-competitions {
